
Changelog
=========

2018.5.0 (unreleased)
---------------------

- Fix issue when returning an excerpt to an already decided proposal. [njohner]
- Fix data in Task PDF when resolving a dossier. [njohner]
- Make save as pdf button colored green. [deiferni]
- Only show proposal notification settings when meeting feature is enabled. [deiferni]
- Display group label in teamdetails instead of group title. [njohner]
- Prevent shadow documents from being relatable. [Rotonen]
- Add reference numbers to protected items admin view links. [Rotonen]
- Sort repository excel exports by reference number. [Rotonen]
- Allow managers to deactivate a dossier. [njohner]
- Bump ftw.contentstats to get disk usage logging. [lgraf]
- Whitelist "recently touched" data structures from CSRF write protection. [lgraf]
- Bump docxcompose to 1.0.0a13 to get a numberig restart bugfix. [deiferni]
- Make the changed field a python datetime. [njohner]
- Fix Officeconnector permission checks for task documents tab actions. [Rotonen]
- Ensure clamped down enough permissions on shadow documents. [Rotonen]
- Include relative_path to dexterity item and folder serialization [elioschmutz]
- Include bumblebee_checksum to dexterity item serialization [elioschmutz]
- Include bumblebee-checksum into @listing endpoint [elioschmutz]
- Drop verbose logging for ObjectTouched events. [lgraf]
- Bump ftw.solr to 2.3.1 to get reindexObjectSecurity fix. [lgraf]
- Fix an issue when creating meetings from a template. [deiferni]
- Added indices and metadata for filesize, filename and file extension. [Rotonen]
- Add action to save a document's PDF as a separate document. [njohner]
- Fix normalizing filename for zip export. [deiferni]
- Fix rendering issue in search view. [deiferni]
- Fix rendering issue in livesearch reply view. [deiferni]
- Fix JS ordering issue: define modernizr.js position. [phgross]
- Bump docxcompose to 1.0.0a12 to get a bugfix for sections in word. [deiferni]