@@ -9,6 +9,7 @@ Changelog
 - Fix data in Task PDF when resolving a dossier. [njohner]
 - Make save as pdf button colored green. [deiferni]
 - Only show proposal notification settings when meeting feature is enabled. [deiferni]
+- Use opaque_id instead of get parameter in SavePDFDocumentUnder. [njohner]
 - Display group label in teamdetails instead of group title. [njohner]
 - Prevent shadow documents from being relatable. [Rotonen]
 - Add reference numbers to protected items admin view links. [Rotonen]
